[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "maestro_py"
version = "0.1.0"
description = "Python bindings for Maestro"
readme = "README.md"
authors = [
  { name = "Qoro Quantum", email = "team@qoroquantum.de" },
]
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
EIGEN5_INCLUDE_DIR = {env = "EIGEN5_INCLUDE_DIR"}
QCSIM_INCLUDE_DIR = {env = "QCSIM_INCLUDE_DIR"}
JSON_INCLUDE_DIR = {env = "JSON_INCLUDE_DIR"}
AER_INCLUDE_DIR = {env = "AER_INCLUDE_DIR"}
